--- a/public/css/app.css
+++ b/public/css/app.css
@@ -10002,3 +10002,19 @@ h3 {
     border-color: #dee2e6;
   }
 }
+.popup-message{
+    width: 250px;
+    height: 100px;
+    background: white;
+    box-shadow: 0px 3px 6px gray;
+    position: fixed;
+    right:10px;
+    bottom: 10px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 20px;
+    border-radius: 10px;
+    transition:1s;
+
+}
